argocd/add-custom-kustomize.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
    # 1. Define an emptyDir volume which will hold the custom binaries
      volumes:
      - name: custom-tools
        emptyDir: {}
      # 2. Use an init container to download/copy custom binaries into the emptyDir
      containers:
      - name: argocd-repo-server
        volumeMounts:
        - mountPath: /custom-tools
          name: custom-tools
