argocd/add-ressource-repo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      containers:
      - name: argocd-repo-server
        resources:
          requests:
            cpu: "10m"
            memory: "256Mi"
          limits:
            cpu: "2"
            memory: "2Gi"
