argocd/argocd-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
  annotations: {}
    #external-dns.alpha.kubernetes.io/hostname: "*.kubefrog.ai"
    #external-dns.alpha.kubernetes.io/target: "172.22.80.100"
    #external-dns.alpha.kubernetes.io/target: "176.185.193.54"
    #external-dns.alpha.kubernetes.io/ttl: "120"
    #external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"


spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - argocd.kubefrog.ai
    port:
      name: http-argocd
      number: 80
      protocol: HTTP
    # Upgrade HTTP to HTTPS
    tls:
      httpsRedirect: true
  - hosts:
    - argocd.kubefrog.ai
    port:
      name: https-argocd
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: kubeflow-ingressgateway-certs-kubefrog-ai
  - hosts:
    - webhook.kubefrog.ai
    port:
      name: http-webhook
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - webhook.kubefrog.ai
    port:
      name: https-webhook
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: kubeflow-ingressgateway-certs-kubefrog-ai
