argocd/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
   name: argocd
   namespace: argocd
spec:
  gateways:
  - argocd-gateway
  hosts:
  - argocd.kubefrog.ai
  http:
  - route:
    - destination:
        host: argocd-server
        port:
          number: 80
