argocd/argocd-webhook-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
   name: argocd-webhook
   namespace: argocd
spec:
  gateways:
  - argocd-gateway
  hosts:
  - webhook.kubefrog.fr
  http:
  - route:
    - destination:
        host: argocd-server
        port:
          number: 80
